# vera-aws

./: .gitignore  README.md  install.sh  main.py  pyproject.toml
.bin/: awscli  terlocal
emulator_core/: backend.py  (+1 more)
emulators/google-compute/: README.md  install.sh  main.py  pyproject.toml
emulators/google-compute/emulator_core/: __init__.py  routes.json  state.py  utils.py
emulators/google-compute/emulator_core/services/: __init__.py  addresse.py  autoscaler.py  backendbucket.py  backendservice.py  disk.py  externalvpngateway.py  firewall.py  firewallpolicie.py  forwardingrule.py  futurereservation.py  globaladdresse.py  globalforwardingrule.py  globalnetworkendpointgroup.py  globalpublicdelegatedprefixe.py  healthcheck.py  httphealthcheck.py  httpshealthcheck.py  image.py  imagefamilyview.py  instance.py  instancegroup.py  instancegroupmanager.py  instancegroupmanagerresizerequest.py  instancesetting.py  instancetemplate.py  instantsnapshot.py  interconnect.py  interconnectattachment.py  interconnectattachmentgroup.py  interconnectgroup.py  license.py  licensecode.py  machineimage.py  network.py  networkattachment.py  networkedgesecurityservice.py  networkendpointgroup.py  networkfirewallpolicie.py  nodegroup.py  (+52 more)
emulators/google-compute/tests/: README.md  eval_emulator.py  print_commands_with_endpoint.py  test.sh
emulators/google-compute/tests/cli/: gcp_commands.json
emulators/google-compute/tests/tf/00-simple-vpc/: main.tf
emulators/google-compute/tests/tf/01-hello-world/: README.md  main.tf
emulators/google-compute/tests/utils/: parse_gcp_commands.py
(+199 files in other folders)
